feat: Add blocked status to tasks and update dependency handling across components